--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-      <h1>GUESS WHAT COLOR IT IS:</h1>
+      <h1><span>GUESS WHAT COLOR IT IS:</span></h1>
     </header>
     <main>
       <h3 class="color"></h3>
